# clDsp-test

./: .gitignore  CMakeLists.txt  README.md  fir_filter.cl  fir_filter_float8.cl  fir_filter_naive.cl  fir_filter_naive_float8.cl  fir_filter_naive_float8_compile.cl  fir_filter_naive_float8_local.cl  rpi1.perf_fir_filter_float8_input.csv  rpi1.perf_fir_filter_float8_taps.csv  rpi3.perf_fir_filter_float8_input.csv  rpi3.perf_fir_filter_float8_taps.csv
src/: fir_filter.c  fir_filter.h  fir_filter_float8.c  fir_filter_float8.h  fir_filter_memmap.c  fir_filter_memmap.h  fir_filter_naive.c  fir_filter_naive.h  fir_filter_naive_float8.c  fir_filter_naive_float8.h  fir_filter_naive_float8_compile.c  fir_filter_naive_float8_compile.h  fir_filter_naive_float8_local.c  fir_filter_naive_float8_local.h  fir_filter_naive_float8_memmap.c  fir_filter_naive_float8_memmap.h  fir_filter_volk.c  fir_filter_volk.h
test/: perf_fir_filter.c  perf_fir_filter_float8.c  perf_fir_filter_float8_input.c  perf_fir_filter_float8_taps.c  perf_fir_filter_memmap.c  perf_fir_filter_naive.c  perf_fir_filter_naive_float8.c  perf_fir_filter_naive_float8_compile.c  perf_fir_filter_naive_float8_local.c  perf_fir_filter_naive_float8_memmap.c  perf_fir_filter_volk.c  perf_fir_filter_volk_input.c  perf_fir_filter_volk_taps.c  test_fir_filter.c
test/resources/: taps.cf32
